Use only paths, not URLs
Adjust method to load files PR per @david-waltermire-nist's rec.